@@ -6,6 +6,8 @@ This version:
   - Spanish translation (Alvaro), Brazil Portuguese translation (Marco Souza)
   - fix save bug with text boxes containing > 4095 characters
   - Czech translation (David Kolibac), Dutch translation (Timo Kluck)
+  - fix crash upon unplugging input devices
+  - change close dialog box default to "save" (patch by Kit Barnes)
 
 Version 0.4.5 (Oct 2, 2009):
   - bugfixes for GTK+ 2.16/2.17 issues with xinput events
